--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698500883-site-reliability-engineer'>BlaBlaCar Site Reliability Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://edrans.applytojob.com/apply/ovSlQyjI2B/Sysadmin-SRE-Site-Reliability-Engineer-SSRSR'>Sysadmin - SRE (Site Reliability Engineer) SSR/SR - Edrans SA - Career Page</a></h5> 
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -84,7 +88,7 @@
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://lendi.recruiterbox.com/jobs/fk03ipk'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://lendi.recruiterbox.com/jobs/fk03ipk'>
     Senior Site Reliability Engineer at Lendi
 </a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
@@ -122,7 +126,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ofnmbfwT'>WebMD Careers - Software Developer, Site Reliability</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ofnmbfwT'>WebMD Careers - Software Developer, Site Reliability</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -134,7 +138,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -154,7 +158,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -178,11 +182,11 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/plex/job/o19pbfwu'>Plex Careers - Site Reliability Engineering Team Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/plex/job/o19pbfwu'>Plex Careers - Site Reliability Engineering Team Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4493584002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4493584002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -224,7 +228,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -273,7 +277,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -299,7 +303,7 @@ customer experience, and increase the overall value of supported applications.</
 Engineering; Experienced. Share. Theorem is a software consultancy that 
 believes?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -311,7 +315,7 @@ believes?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
+<h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -366,7 +370,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/backcountry/job/o0Kvafw9'>Backcountry Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/backcountry/job/o0Kvafw9'>Backcountry Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -374,7 +378,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/algorithmia/jobs/4477002002?gh_jid=4477002002'>Job Application for Site Reliability Engineer at Algorithmia</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorithmia/jobs/4477002002?gh_jid=4477002002'>Job Application for Site Reliability Engineer at Algorithmia</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Already trusted by over 100k developers and major enterprise customers, 
 Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
@@ -400,7 +404,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/criteo/d1895923-c2a8-4714-9a60-e71643bc1f20'>Criteo - Site Reliability Engineer - Hadoop</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/d1895923-c2a8-4714-9a60-e71643bc1f20'>Criteo - Site Reliability Engineer - Hadoop</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -446,10 +450,6 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <hr/>
 <h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4410616002'>Job Application for Senior Site Reliability Engineer at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
-<p>Posted on: 2019-10-15</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/gojek/2b67515f-4302-4e9a-b850-5a53d349f0d7'>Gojek - Site Reliability Engineer</a></h5> 
-<p><span class="badge badge-light">Bengaluru  Bangalore Jakarta</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
 
