--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -120,7 +120,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Washington, District of Columbia  San Francisco, California  Los Angeles, California  Atlanta, Georgia  Seattle, Washington  Philadelphia, Pennsylvania  Chicago, Illinois  Los Angeles, California  New York, New York</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
+<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 18, 2019 ... At Adobe, you'll join our Legal Privacy, Trust & Safety team. We're seeking a 
 passionate, collaborative, and thoughtful legal specialist, who has prior 
@@ -142,7 +142,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
+<h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -162,7 +162,7 @@ experience?...</p>
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -174,7 +174,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
+<h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -290,7 +290,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -350,7 +350,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1642654'>Job Application for Privacy Analyst at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1642654'>Job Application for Privacy Analyst at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
@@ -405,7 +405,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -421,7 +421,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/q6grj7prd99phmnomyoujk5qdh'>Integrity Compliance Privacy Specialist - Boise, ID | Treva Corporation</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/q6grj7prd99phmnomyoujk5qdh'>Integrity Compliance Privacy Specialist - Boise, ID | Treva Corporation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -429,7 +429,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
